# fast_api_projects

./: README.md
event_booking_api/: .coverage  README.md  models.py  pyproject.toml  routes.py  services.py  test.py  test_routes.py
flight_booking_api/: .coverage  README.md  main.py  models.py  pyproject.toml  routes.py  services.py  test_routes.py
payment_processing_api/: .coverage  README.md  main.py  models.py  pyproject.toml  routes.py  test.py  test_routes.py  utils.py
product_search_api/: .coverage  README.md  main.py  models.py  pyproject.toml  routes.py  services.py  test_routes.py
recipe_mgt_api/: README.md  package-lock.json  pyproject.toml
user_reg_api/: .coverage  README.md  main.py  models.py  pyproject.toml  routes.py  services.py  test.py  test_routes.py  utils.py
