[tool.poetry]
name = "event-booking-api"
version = "0.1.0"
description = ""
authors = ["Nwaru Chidubem Theresa <tessychidubem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
black = "^24.3.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-func-cov = "^0.2.3"
httpx = "^0.27.0"
phonenumbers = "^8.13.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
