[tool.poetry]
name = "payment-processing-api"
version = "0.1.0"
description = ""
authors = ["Nwaru Chidubem Theresa <tessychidubem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
httpx = "^0.27.0"
pytest = "^8.1.1"
cov19 = "^0.0.9"
coverage = "^7.4.4"
black = "^24.3.0"
phonenumbers = "^8.13.33"
requests = "^2.31.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
